# odin-softioc

./: .gitattributes  README.md  setup.cfg
src/odin_softioc/: _version.py  adapter.py  controller.py  pv_parameter_tree.py
test/: test_pv_bound_tree.py  test_pv_parameter_accessor.py  test_pv_parameter_tree.py  utils.py
test/config/: softioc.cfg
