[metadata]
name = odin-softioc
description = odin-control EPICS softIOC example
url = https//github.com/stfc-aeg/odin-softioc
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

install_requires =
    odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.3.0

[options.extras_require]
# For development tests/docs
dev =
    pytest
    pytest-cov
    pytest-asyncio
    tox
    flake8
    flake8-docstrings
    isort

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
# console_scripts =

[flake8]
max-line-length = 100

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/odin_softioc/_version.py
versionfile_build = odin_softioc/_version.py
tag_prefix=
